--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-        <link rel="shortcut icon" href="#">
-		<title>My first three.js app</title>
-		<style>
-			body { margin: 0; }
-		</style>
-	</head>
-	<body>		
-		<script type="module" src="/main.js"></script>
-		<div id="scene-container" style="height: 100vh;">
-		  <!-- Our <canvas> will be inserted here -->
+
+<head>
+	<meta charset="utf-8">
+	<link rel="shortcut icon" href="#">
+	<title>My first three.js app</title>
+	<link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+	<script type="module" src="/main.js"></script>
+	<div id="scene-container" class="container">
+		<div class="box">
+			<div class="box-header">
+				<span>Title</span>
+				<div class="box-move"></div>
+			</div>
+			<div class="box-content">
+				<div class="content">content</div>
+			</div>
 		</div>
-	</body>
+		<!-- Our <canvas> will be inserted here -->
+	</div>
+</body>
+
 </html>
