Adding panel for x/y axis

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<div class="box-move"></div>
 			</div>
 			<div class="box-content">
-				<div class="content">content</div>
+				<svg></svg>
 			</div>
 		</div>
 		<!-- Our <canvas> will be inserted here -->
