Change in structure

--- a/index.html
+++ b/index.html
@@ -10,18 +10,7 @@
 
 <body>
 	<script type="module" src="/main.js"></script>
-	<div id="scene-container" class="container">
-		<div class="box">
-			<div class="box-header">
-				<span>Title</span>
-				<div class="box-move"></div>
-			</div>
-			<div class="box-content">
-				<svg></svg>
-			</div>
-		</div>
-		<!-- Our <canvas> will be inserted here -->
-	</div>
+	<div id="scene-container" class="container"></div>
 </body>
 
 </html>
