modification in intersection panel

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 
 <body>
 	<script type="module" src="/main.js"></script>
-	<div id="scene-container" class="container"></div>
+	<div id="scene-container" class="container">
+		<div id="panel" class="panel" style="top: 0px; left: 0px;">
+			<div class="panel-header">
+				<span data-before="▸">Intersection</span>
+				<div class="draggable"></div>
+			</div>
+			<div class="panel-content">
+				<svg></svg>
+			</div>
+		</div>
+	</div>
 </body>
 
 </html>
