--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="shortcut icon" href="#">
-	<title>My first three.js app</title>
+	<title>Atomic Orbital Viewer</title>
 	<link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-	<script type="module" src="/main.js"></script>
+	<script type="module" src="/main.ts"></script>
 	<div id="scene-container" class="container">
 		<div id="panel" class="panel" style="top: 0px; left: 0px;">
 			<div class="panel-header">
